--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -26,9 +26,36 @@
         <a href="https://gaseongbitem.com/" target="_blank" rel="noreferrer noopener" style="color:#ffffff; text-decoration:none;">가성비템</a>
         <a href="https://aliexpresss.kr/" target="_blank" rel="noreferrer noopener" style="color:#ffffff; text-decoration:none;">알리익스프레스</a>
         <a href="https://dapjidown.com/" target="_blank" rel="noreferrer noopener" style="color:#ffffff; text-decoration:none;">답지다운</a>
-        <a href="https://surls.kr/" target="_blank" rel="noreferrer noopener" style="color:#ffffff; text-decoration:none;">surls.kr/</a>
-        <a href="https://m-y1.com/" target="_blank" rel="noreferrer noopener" style="color:#ffffff; text-decoration:none;">m-y1.com/</a>
-        <a href="specialtem.co.kr" target="_blank" rel="noreferrer noopener" style="color:#ffffff; text-decoration:none;">specialtem.co.kr</a>
+        <a href="https://surls.kr/" target="_blank" rel="noreferrer noopener" style="color:#ffffff; text-decoration:none;">surls.kr</a>
+        <a href="https://m-y1.com/" target="_blank" rel="noreferrer noopener" style="color:#ffffff; text-decoration:none;">m-y1.com</a>
+        <a href="https://specialtem.co.kr/" target="_blank" rel="noreferrer noopener" style="color:#ffffff; text-decoration:none;">specialtem.co.kr</a>
+        <a href="https://ducktil93.github.io" target="_blank" rel="noreferrer noopener" style="color:#ffffff; text-decoration:none;">ducktil93.github.io</a>
+        <a href="https://nasalab1005.github.io" target="_blank" rel="noreferrer noopener" style="color:#ffffff; text-decoration:none;">nasalab1005.github.io</a>
+        <a href="https://selin100587.github.io" target="_blank" rel="noreferrer noopener" style="color:#ffffff; text-decoration:none;">selin100587.github.io</a>
+        <a href="https://sixfigure999999.github.io" target="_blank" rel="noreferrer noopener" style="color:#ffffff; text-decoration:none;">sixfigure999999.github.io</a>
+        <a href="https://nasacom1005.github.io" target="_blank" rel="noreferrer noopener" style="color:#ffffff; text-decoration:none;">nasacom1005.github.io</a>
+        <a href="https://texasusa1005.github.io" target="_blank" rel="noreferrer noopener" style="color:#ffffff; text-decoration:none;">texasusa1005.github.io</a>
+        <a href="https://ilsangview0.github.io" target="_blank" rel="noreferrer noopener" style="color:#ffffff; text-decoration:none;">ilsangview0.github.io</a>
+        <a href="https://tnsuas75007.github.io" target="_blank" rel="noreferrer noopener" style="color:#ffffff; text-decoration:none;">tnsuas75007.github.io</a>
+        <a href="https://blogmakers132.github.io" target="_blank" rel="noreferrer noopener" style="color:#ffffff; text-decoration:none;">blogmakers132.github.io</a>
+        <a href="https://marktailer644.github.io" target="_blank" rel="noreferrer noopener" style="color:#ffffff; text-decoration:none;">marktailer644.github.io</a>
+        <a href="https://darktemplerplus3.github.io" target="_blank" rel="noreferrer noopener" style="color:#ffffff; text-decoration:none;">darktemplerplus3.github.io</a>
+        <a href="https://techvit7.github.io" target="_blank" rel="noreferrer noopener" style="color:#ffffff; text-decoration:none;">techvit7.github.io</a>
+        <a href="https://moonbird1001.github.io" target="_blank" rel="noreferrer noopener" style="color:#ffffff; text-decoration:none;">moonbird1001.github.io</a>
+        <a href="https://billruntoyou.github.io" target="_blank" rel="noreferrer noopener" style="color:#ffffff; text-decoration:none;">billruntoyou.github.io</a>
+        <a href="https://forkidsmaker1005.github.io" target="_blank" rel="noreferrer noopener" style="color:#ffffff; text-decoration:none;">forkidsmaker1005.github.io</a>
+        <a href="https://selena7942.github.io" target="_blank" rel="noreferrer noopener" style="color:#ffffff; text-decoration:none;">selena7942.github.io</a>
+        <a href="https://bcdcompany23.github.io" target="_blank" rel="noreferrer noopener" style="color:#ffffff; text-decoration:none;">bcdcompany23.github.io</a>
+        <a href="https://jerkyllio.github.io" target="_blank" rel="noreferrer noopener" style="color:#ffffff; text-decoration:none;">jerkyllio.github.io</a>
+        <a href="https://ara87won.github.io" target="_blank" rel="noreferrer noopener" style="color:#ffffff; text-decoration:none;">ara87won.github.io</a>
+        <a href="https://ducktil93.github.io" target="_blank" rel="noreferrer noopener" style="color:#ffffff; text-decoration:none;">ducktil93.github.io</a>
+        <a href="https://dreamfastball.github.io" target="_blank" rel="noreferrer noopener" style="color:#ffffff; text-decoration:none;">dreamfastball.github.io</a>
+        <a href="https://emilyjohn199964.github.io" target="_blank" rel="noreferrer noopener" style="color:#ffffff; text-decoration:none;">emilyjohn199964.github.io</a>
+        <a href="https://clientmaster23.github.io" target="_blank" rel="noreferrer noopener" style="color:#ffffff; text-decoration:none;">clientmaster23.github.io</a>
+        <a href="https://drseoauto.github.io" target="_blank" rel="noreferrer noopener" style="color:#ffffff; text-decoration:none;">drseoauto.github.io</a>
+        <a href="https://seobaksa1004.github.io" target="_blank" rel="noreferrer noopener" style="color:#ffffff; text-decoration:none;">seobaksa1004.github.io</a>
+        <a href="https://newtypesolution1.github.io" target="_blank" rel="noreferrer noopener" style="color:#ffffff; text-decoration:none;">newtypesolution1.github.io</a>
+        <a href="https://rosemari9642.github.io" target="_blank" rel="noreferrer noopener" style="color:#ffffff; text-decoration:none;">rosemari9642.github.io</a>
       </div>
     </div>
     {%- include snippets/get-locale-string.html key='COPYRIGHT_DATES' -%}
